feat: deploy shell integration with docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,9 @@ services:
 networks:
   monorepo-network:
     driver: bridge
+# docker compose up -d
+# docker compose stop
+# docker compose start
+# docker compose restart
+# docker compose stop && # docker compose rm -f
+
