--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"start:dev:batch": "nest start modu-batch --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "NODE_ENV=production node dist/apps/modu-api/main",
-		"start:prod:batch": "node dist/apps/modu-batch/main",
+		"start:prod:batch": "NODE_ENV=production node dist/apps/modu-batch/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
