--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     networks:
       - monorepo-network
     # FOR PRODUCTION
-    command: bash -c "npm install && npm run build && npm run start:prod"
+    command: bash -c "rm -rf dist $$ npm install && npm run build && npm run start:prod"
 
   modu-batch:
     container_name: modu-batch
